--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -23,7 +23,9 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/ivPoster"
+        android:textColor="#3F51B5"
         android:textSize="24sp"
+        android:textStyle="bold"
         tools:text="Fast and Furious Presents: Hobbs Shaw" />
 
     <TextView
