--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/ivPoster"
+        android:textColor="#009688"
         android:textSize="24sp"
         android:textStyle="bold"
         tools:text="Fast and Furious Presents: Hobbs Shaw" />
