--- a/app/src/main/res/layout-land/item_pop.xml
+++ b/app/src/main/res/layout-land/item_pop.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,5 +15,17 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="15dp"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="123dp"
+        android:layout_height="91dp"
+        android:layout_alignTop="@+id/ivPoster"
+        android:layout_alignEnd="@+id/ivPoster"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="288dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="279dp"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
 </RelativeLayout>
